--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -525,7 +525,7 @@
                         <div class="panel-body">
                             <div data-ng-include data-src="'notices.html'"></div>
                             <button type="button" class="btn btn-default pull-right"
-                                    data-toggle="modal" data-target="#addNotice">Добавить
+                                    data-toggle="modal" data-target="#addNotice" ng-click="clearNoticeFields()">Добавить
                                 заметку
                             </button>
 
