--- a/public/views/attached_skills/attached_skills_manager.html
+++ b/public/views/attached_skills/attached_skills_manager.html
@@ -4,11 +4,26 @@
     <title>Список прикрепленных навыков</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <link rel="stylesheet" href="https://rawgit.com/iamisti/mdDataTable/master/dist/md-data-table-style.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/main.css">
+    <style type="text/css">
+        html, body {
+            background: #DDDDDD;
+        }
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
+    <script src="https://rawgit.com/iamisti/mdDataTable/master/dist/md-data-table-templates.js"></script>
+    <script src="https://rawgit.com/iamisti/mdDataTable/master/dist/md-data-table.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
     <script src="attached_skills_controller.js"></script>
@@ -16,136 +31,40 @@
 </head>
 
 <body ng-app="attachedSkillManagerApp">
+
 <div ng-controller="permissionsController">
-    <div data-ng-include data-src="'/views/main-menu.html'"></div>
-    <div ng-controller="attachedSkillListController">
-        <div data-ng-include data-src="'/views/loader.html'"></div>
+    <div ng-controller="attachedSkillListController" layout-margin>
+        <div data-ng-include data-src="'/views/main-menu.html'"></div>
+        <md-card style="margin:0px">
+            <md-subheader>Поиск по навыкам</md-subheader>
 
-        <div class="row">
-            <div class="col-xs-offset-1 col-xs-2">
-                <p class="lead">
-                    <strong>Поиск навыка:</strong>
-                </p>
+            <md-input-container style="margin:15px;">
+                <label>Поиск</label>
+                <input type="text" ng-model="filterName">
+            </md-input-container>
+
+            <div ng-hide="true">
+                {{(filteredItems = (attachedSkills | filter: filterName))}}
             </div>
-            <div class="col-xs-offset-2 col-xs-4">
-                <p class="lead"><input type="text" ng-model="search"></p>
-            </div>
-        </div>
+        </md-card>
 
-        <table class="table table-striped">
-            <tr>
-                <th>Имя</th>
-                <th>Сл.</th>
-                <th>Теор.</th>
-                <th>Деф.</th>
-                <th ng-show="hasDeletePermission('AttachedSkill')"></th>
-            </tr>
-            <tr ng-repeat="attachedSkill in attachedSkills | orderBy : 'name' | filter: search">
-                <td style="vertical-align:middle;">{{ attachedSkill.name }}</td>
-                <td style="vertical-align:middle;">
-                    <div ng-if="attachedSkill.difficult">
-                        <span class="glyphicon glyphicon-ok"/>
-                    </div>
-                    <div ng-if="!attachedSkill.difficult">
-                        <span class="glyphicon glyphicon-remove"/>
-                    </div>
-                </td>
-                <td style="vertical-align:middle;">
-                    <div ng-if="attachedSkill.theoretical">
-                        <span class="glyphicon glyphicon-ok"/>
-                    </div>
-                    <div ng-if="!attachedSkill.theoretical">
-                        <span class="glyphicon glyphicon-remove"/>
-                    </div>
-                </td>
-                <td style="vertical-align:middle;">
-                    <div ng-if="attachedSkill.default_skill">
-                        <span class="glyphicon glyphicon-ok"/>
-                    </div>
-                    <div ng-if="!attachedSkill.default_skill">
-                        <span class="glyphicon glyphicon-remove"/>
-                    </div>
-                </td>
-                <td ng-show="hasDeletePermission('AttachedSkill')">
-                    <button type="button" class="btn btn-link" ng-click="deleteAttachedSkill(attachedSkill.id)">х
-                    </button>
-                </td>
-            </tr>
-        </table>
-    </div>
+        <mdt-table mdt-row="{'data': filteredItems,
+        'table-row-id-key': 'id',
+        'column-keys': ['name', 'difficult', 'theoretical', 'default_skill', 'id']}">
+            <mdt-header-row>
+                <mdt-column align-rule="left">Имя</mdt-column>
+                <mdt-column align-rule="center">Сл.</mdt-column>
+                <mdt-column align-rule="center">Теор.</mdt-column>
+                <mdt-column align-rule="center">Деф.</mdt-column>
+                <mdt-column align-rule="center">Действия</mdt-column>
+            </mdt-header-row>
 
-    <div class="container" ng-show="hasCreatePermission('AttachedSkill')">
-        <h2>Добавить навык</h2>
-
-        <form class="form-horizontal" role="form" ng-controller="addAttachedSkillController"
-              name="createAttachedSkillForm">
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="attachedSkill_name">Название навыка:</label>
-
-                <div class="col-sm-10">
-                    <input type="text" ng-model="attachedSkill_name" class="form-control" id="attachedSkill_name"
-                           placeholder="Лидерство" required>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="difficult">Сложный:</label>
-
-                <div class="col-sm-10">
-                    <div class="pull-left">
-                        <input type="checkbox" class="form-control" id="difficult" ng-model="difficult">
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="theoretical">Теоретический:</label>
-
-                <div class="col-sm-10">
-                    <div class="pull-left">
-                        <input type="checkbox" class="form-control" id="theoretical" ng-model="theoretical">
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="default_skill">Дефолтный:</label>
-
-                <div class="col-sm-10">
-                    <div class="pull-left">
-                        <input type="checkbox" class="form-control" id="default_skill" ng-model="default_skill">
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="default_skill">Заклинания:</label>
-
-                <div class="col-sm-10">
-                    <div class="pull-left">
-                        <input type="checkbox" class="form-control" id="spells_connected" ng-model="spells_connected">
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="description">Описание:</label>
-
-                <div class="col-sm-10">
-                    <input type="text" ng-model="description" class="form-control" id="description"
-                           placeholder="Описание здесь">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default" ng-click="createAttachedSkill()"
-                            ng-disabled="createAttachedSkillForm.$invalid">Добавить
-                    </button>
-                </div>
-            </div>
-        </form>
+            <mdt-custom-cell column-key="id">
+                <button ng-click="showDialog()">
+                    Редактировать {{value}}
+                </button>
+            </mdt-custom-cell>
+        </mdt-table>
     </div>
 </div>
 
