fix calculateMeritSelectOptions, do not run getRaceMerits each time

--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -349,7 +349,7 @@
                                     <div class="panel panel-default">
                                         <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#perkAccordeon" href="#merits"
-                                               ng-click="getPersonageMerits();calculateShowMerits()">
+                                               ng-click="getPersonageMerits()">
                                                 <div class="panel-heading">
                                                     Достоинства
                                                 </div>
