--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -382,7 +382,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateMeritSelectOptions();showAddMeritDialog(selectMerits, addPersonageMerit, validatePrerequisites)" class="md-raised">Добавить
+                                                    <md-button ng-click="calculateMeritSelectOptions()" class="md-raised">Добавить
                                                         достоинство
                                                     </md-button>
                                                 </md-content>
