--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -178,7 +178,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateAttachedSkillSelectOptions();showAddDialog(selectAttachedSkills, addPersonageAttachedSkill)" class="md-raised">Добавить прикрепленный навык
+                                                    <md-button ng-click="calculateAttachedSkillSelectOptions()" class="md-raised">Добавить прикрепленный навык
                                                     </md-button>
                                                 </md-content>
 
@@ -294,7 +294,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateTriggerSkillSelectOptions();showAddDialog(selectTriggerSkills, addPersonageTriggerSkill)" class="md-raised">Добавить тригерный навык
+                                                    <md-button ng-click="calculateTriggerSkillSelectOptions()" class="md-raised">Добавить тригерный навык
                                                     </md-button>
                                                 </md-content>
 
@@ -364,7 +364,7 @@
                                                     </div>
                                                     <div class="col-md-2 col-xs-6">
                                                         <md-content class="md-padding pull-right">
-                                                            <md-button ng-click="calculateInherentSelectOptions();showAddDialog(selectInherents, addPersonageInherent)" class="md-raised">Добавить
+                                                            <md-button ng-click="calculateInherentSelectOptions()" class="md-raised">Добавить
                                                                 врожденное
                                                             </md-button>
                                                         </md-content>
@@ -411,7 +411,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateMeritSelectOptions();showAddMeritDialog(selectMerits, addPersonageMerit, validatePrerequisites)" class="md-raised">Добавить
+                                                    <md-button ng-click="calculateMeritSelectOptions()" class="md-raised">Добавить
                                                         достоинство
                                                     </md-button>
                                                 </md-content>
@@ -457,7 +457,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateFlawSelectOptions();showAddDialog(selectFlaws, addPersonageFlaw)" class="md-raised">Добавить
+                                                    <md-button ng-click="calculateFlawSelectOptions()" class="md-raised">Добавить
                                                         недостаток
                                                     </md-button>
                                                 </md-content>
