--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -168,7 +168,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateAttachedSkillSelectOptions();showAddDialog(selectAttachedSkills, addPersonageAttachedSkill)" class="md-raised">Добавить прикрепленный навык
+                                                    <md-button ng-click="calculateAttachedSkillSelectOptions()" class="md-raised">Добавить прикрепленный навык
                                                     </md-button>
                                                 </md-content>
 
@@ -276,7 +276,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateTriggerSkillSelectOptions();showAddDialog(selectTriggerSkills, addPersonageTriggerSkill)" class="md-raised">Добавить тригерный навык
+                                                    <md-button ng-click="calculateTriggerSkillSelectOptions()" class="md-raised">Добавить тригерный навык
                                                     </md-button>
                                                 </md-content>
 
@@ -337,7 +337,7 @@
                                                 </table>
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateInherentSelectOptions();showAddDialog(selectInherents, addPersonageInherent)" class="md-raised">Добавить
+                                                    <md-button ng-click="calculateInherentSelectOptions()" class="md-raised">Добавить
                                                         врожденное
                                                     </md-button>
                                                 </md-content>
@@ -428,7 +428,7 @@
 
 
                                                 <md-content class="md-padding pull-right">
-                                                    <md-button ng-click="calculateFlawSelectOptions();showAddDialog(selectFlaws, addPersonageFlaw)" class="md-raised">Добавить
+                                                    <md-button ng-click="calculateFlawSelectOptions()" class="md-raised">Добавить
                                                         недостаток
                                                     </md-button>
                                                 </md-content>
