--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -5,32 +5,34 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#main_menu">Главное меню</a>
+                            <a data-toggle="collapse" href="#main_menu" id="main_menu_link">Главное меню</a>
                         </h4>
                     </div>
                     <div class="col-xs-3">
-                        Права: {{player.Role.name}}
+                        Права:
+                        <span id="role_name">{{player.Role.name}}</span>
                     </div>
                     <div class="col-xs-3">
-                        Игрок: {{player.name}}
+                        Игрок:
+                        <span id="player_name">{{player.name}}</span>
                     </div>
                 </div>
             </div>
             <div id="main_menu" class="panel-collapse collapse">
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="/" ng-click="deleteUserCookie()">Сменить юзера</a></li>
-                    <li class="list-group-item" ng-show="hasManagePermissionsAccess()"><a
-                            href="/views/permissions/managePermissions.html">Управление доступом</a></li>
-                    <li class="list-group-item"><a href="/views/races/race_manager.html">Расы</a></li>
-                    <li class="list-group-item"><a href="/views/attributes/attribute_manager.html">Атрибуты</a></li>
-                    <li class="list-group-item"><a href="/views/merits/merit_manager.html">Достоинства</a></li>
-                    <li class="list-group-item"><a href="/views/inherents/inherent_manager.html">Врожденные особенности</a></li>
-                    <li class="list-group-item"><a href="/views/flaws/flaw_manager.html">Недостатки</a></li>
-                    <li class="list-group-item"><a href="/views/attached_skills/attached_skills_manager.html">Прикрепленные
+                    <li class="list-group-item"><a id="change_user" href="/" ng-click="deleteUserCookie()">Сменить юзера</a></li>
+                    <li class="list-group-item" ng-show="hasManagePermissionsAccess()"><a id="permissions"
+                                                                                          href="/views/permissions/managePermissions.html">Управление доступом</a></li>
+                    <li class="list-group-item"><a id="races" href="/views/races/race_manager.html">Расы</a></li>
+                    <li class="list-group-item"><a id="attributes" href="/views/attributes/attribute_manager.html">Атрибуты</a></li>
+                    <li class="list-group-item"><a id="merits" href="/views/merits/merit_manager.html">Достоинства</a></li>
+                    <li class="list-group-item"><a id="inherents" href="/views/inherents/inherent_manager.html">Врожденные особенности</a></li>
+                    <li class="list-group-item"><a id="flaws" href="/views/flaws/flaw_manager.html">Недостатки</a></li>
+                    <li class="list-group-item"><a id="attached_skills" href="/views/attached_skills/attached_skills_manager.html">Прикрепленные
                         навыки</a></li>
-                    <li class="list-group-item"><a href="/views/trigger_skills/trigger_skills_manager.html">Тригерные навыки</a></li>
-                    <li class="list-group-item"><a href="/views/spells/spells_manager.html">Заклинания</a></li>
-                    <li class="list-group-item"><a href="/views/user_personage_manager.html?id={{player.id}}">Мои
+                    <li class="list-group-item"><a id="trigger_skills" href="/views/trigger_skills/trigger_skills_manager.html">Тригерные навыки</a></li>
+                    <li class="list-group-item"><a id="spells" href="/views/spells/spells_manager.html">Заклинания</a></li>
+                    <li class="list-group-item"><a id="my_personages" href="/views/user_personage_manager.html?id={{player.id}}">Мои
                         персонажи</a></li>
                 </ul>
             </div>
