improve personage pages

--- a/public/views/personage_logic/derivatives_characteristics.html
+++ b/public/views/personage_logic/derivatives_characteristics.html
@@ -1,98 +1,93 @@
-<section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-    <md-button class="md-fab" aria-label="Eat cake">
-        <md-icon md-svg-src="/images/hitPiercePunch.svg"></md-icon>
-    </md-button>
-    <md-button class="md-fab md-primary" aria-label="Use Android">
-        <md-icon md-svg-src="/images/hitPiercePunch.svg"></md-icon>
-    </md-button>
-    <md-button class="md-fab" ng-disabled="true" aria-label="Comment">
-        <md-icon md-svg-src="/images/hitPiercePunch.svg"></md-icon>
-    </md-button>
-    <md-button class="md-fab md-primary md-hue-2" aria-label="Profile">
-        <md-icon md-svg-src="/images/hitPiercePunch.svg"></md-icon>
-    </md-button>
-    <div class="label">FAB</div>
-</section>
-
-<!--<div class="row">-->
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="hitPiercePunchDescription" src="/images/hitPiercePunch.png" style="vertical-align: top" width="30" height="30"/>-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{hitPiercePunch}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+<div class="row">
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="hitPiercePunchDescription">
+            <img src="/images/hitPiercePunch.svg"
+                 style="vertical-align: middle" width="30" height="30"/>
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{hitPiercePunch}}</span>
+        </md-button>
+    </div>
 
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="hitChopPunchDescription" src="/images/hitChopPunch.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{hitChopPunch}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="hitChopPunchDescription">
+            <img src="/images/hitChopPunch.png"
+                 style="vertical-align: middle"
+                 width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{hitChopPunch}}</span>
+        </md-button>
+    </div>
 
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="rangedHitDescription" src="/images/rangedHit.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{rangedHit}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<br/>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="rangedHitDescription">
+            <img src="/images/rangedHit.png" style="vertical-align: middle"
+                 width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{rangedHit}}</span>
+        </md-button>
+    </div>
+</div>
+<br/>
 
-<!--<div class="row">-->
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="parryPiercePunchDescription" src="/images/parryPiercePunch.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{parryPiercePunch}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+<div class="row">
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="parryPiercePunchDescription">
+            <img src="/images/parryPiercePunch.png"
+                 style="vertical-align: middle" width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{parryPiercePunch}}</span>
+        </md-button>
+    </div>
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="parryChopPunchDescription" src="/images/parryChopPunch.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{parryChopPunch}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="parryChopPunchDescription">
+            <img src="/images/parryChopPunch.png"
+                 style="vertical-align: middle" width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{parryChopPunch}}</span>
+        </md-button>
+    </div>
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="dodgeDescription" src="/images/dodge.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{dodge}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<br/>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="dodgeDescription" src="/images/dodge.png">
+            <img style="vertical-align: middle" width="30"
+                 height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{dodge}}</span>
+        </md-button>
+    </div>
+</div>
+<br/>
 
-<!--<div class="row">-->
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="generalActionPointsDescription" src="/images/generalActionPoints.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{generalActionPoints}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+<div class="row">
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="generalActionPointsDescription">
+            <img src="/images/generalActionPoints.png"
+                 style="vertical-align: middle" width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{generalActionPoints}}</span>
+        </md-button>
+    </div>
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="mentalActionPointsDescription" src="/images/mentalActionPoints.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{mentalActionPoints}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="mentalActionPointsDescription">
+            <img src="/images/mentalActionPoints.png"
+                 style="vertical-align: middle" width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{mentalActionPoints}}</span>
+        </md-button>
+    </div>
 
-    <!--<div class="col-xs-4 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="endurancePointsDescription" src="/images/endurancePoints.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{endurancePoints}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-<!--<br/>-->
+    <div class="col-xs-4 text-center">
+        <md-button uib-tooltip-html="endurancePointsDescription">
+            <img src="/images/endurancePoints.png"
+                 style="vertical-align: middle" width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{endurancePoints}}</span>
+        </md-button>
+    </div>
+</div>
+<br/>
 
-<!--<div class="row">-->
-    <!--<div class="col-xs-12 text-center">-->
-        <!--<div style="cursor: pointer;">-->
-            <!--<img uib-tooltip-html="initiativeDescription" src="/images/initiative.png" style="vertical-align: top" width="30" height="30">-->
-            <!--<span style="line-height: 1; font-size: 30px; vertical-align: top">{{initiative}}</span>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<div class="row">
+    <div class="col-xs-12 text-center">
+        <md-button uib-tooltip-html="initiativeDescription">
+            <img src="/images/initiative.png" style="vertical-align: middle"
+                 width="30" height="30">
+            <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{initiative}}</span>
+        </md-button>
+    </div>
+</div>
