--- a/public/views/personage_logic/derivatives_characteristics.html
+++ b/public/views/personage_logic/derivatives_characteristics.html
@@ -10,7 +10,7 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="hitChopPunchDescription">
-            <img src="/images/hitChopPunch.png"
+            <img src="/images/hitChopPunch.svg"
                  style="vertical-align: middle"
                  width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{hitChopPunch}}</span>
@@ -20,7 +20,7 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="rangedHitDescription">
-            <img src="/images/rangedHit.png" style="vertical-align: middle"
+            <img src="/images/rangedHit.svg" style="vertical-align: middle"
                  width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{rangedHit}}</span>
         </md-button>
@@ -31,7 +31,7 @@
 <div class="row">
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="parryPiercePunchDescription">
-            <img src="/images/parryPiercePunch.png"
+            <img src="/images/parryPiercePunch.svg"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{parryPiercePunch}}</span>
         </md-button>
@@ -39,14 +39,14 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="parryChopPunchDescription">
-            <img src="/images/parryChopPunch.png"
+            <img src="/images/parryChopPunch.svg"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{parryChopPunch}}</span>
         </md-button>
     </div>
 
     <div class="col-xs-4 text-center">
-        <md-button uib-tooltip-html="dodgeDescription" src="/images/dodge.png">
+        <md-button uib-tooltip-html="dodgeDescription" src="/images/dodge.svg">
             <img style="vertical-align: middle" width="30"
                  height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{dodge}}</span>
@@ -58,7 +58,7 @@
 <div class="row">
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="generalActionPointsDescription">
-            <img src="/images/generalActionPoints.png"
+            <img src="/images/generalActionPoints.svg"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{generalActionPoints}}</span>
         </md-button>
@@ -66,7 +66,7 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="mentalActionPointsDescription">
-            <img src="/images/mentalActionPoints.png"
+            <img src="/images/mentalActionPoints.svg"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{mentalActionPoints}}</span>
         </md-button>
@@ -74,7 +74,7 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="endurancePointsDescription">
-            <img src="/images/endurancePoints.png"
+            <img src="/images/endurancePoints.svg"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{endurancePoints}}</span>
         </md-button>
@@ -85,7 +85,7 @@
 <div class="row">
     <div class="col-xs-12 text-center">
         <md-button uib-tooltip-html="initiativeDescription">
-            <img src="/images/initiative.png" style="vertical-align: middle"
+            <img src="/images/initiative.svg" style="vertical-align: middle"
                  width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{initiative}}</span>
         </md-button>
