fix duplicated ids

--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -21,17 +21,17 @@
             <div id="main_menu" class="panel-collapse collapse">
                 <ul class="list-group">
                     <li class="list-group-item"><a id="change_user" href="/" ng-click="deleteUserCookie()">Сменить юзера</a></li>
-                    <li class="list-group-item" ng-show="hasManagePermissionsAccess()"><a id="permissions"
+                    <li class="list-group-item" ng-show="hasManagePermissionsAccess()"><a id="permissions_mm"
                                                                                           href="/views/permissions/managePermissions.html">Управление доступом</a></li>
-                    <li class="list-group-item"><a id="races" href="/views/races/race_manager.html">Расы</a></li>
-                    <li class="list-group-item"><a id="attributes" href="/views/attributes/attribute_manager.html">Атрибуты</a></li>
-                    <li class="list-group-item"><a id="merits" href="/views/merits/merit_manager.html">Достоинства</a></li>
-                    <li class="list-group-item"><a id="inherents" href="/views/inherents/inherent_manager.html">Врожденные особенности</a></li>
-                    <li class="list-group-item"><a id="flaws" href="/views/flaws/flaw_manager.html">Недостатки</a></li>
-                    <li class="list-group-item"><a id="attached_skills" href="/views/attached_skills/attached_skills_manager.html">Прикрепленные
+                    <li class="list-group-item"><a id="races_mm" href="/views/races/race_manager.html">Расы</a></li>
+                    <li class="list-group-item"><a id="attributes_mm" href="/views/attributes/attribute_manager.html">Атрибуты</a></li>
+                    <li class="list-group-item"><a id="merits_mm" href="/views/merits/merit_manager.html">Достоинства</a></li>
+                    <li class="list-group-item"><a id="inherents_mm" href="/views/inherents/inherent_manager.html">Врожденные особенности</a></li>
+                    <li class="list-group-item"><a id="flaws_mm" href="/views/flaws/flaw_manager.html">Недостатки</a></li>
+                    <li class="list-group-item"><a id="attached_skills_mm" href="/views/attached_skills/attached_skills_manager.html">Прикрепленные
                         навыки</a></li>
-                    <li class="list-group-item"><a id="trigger_skills" href="/views/trigger_skills/trigger_skills_manager.html">Тригерные навыки</a></li>
-                    <li class="list-group-item"><a id="spells" href="/views/spells/spells_manager.html">Заклинания</a></li>
+                    <li class="list-group-item"><a id="trigger_skills_mm" href="/views/trigger_skills/trigger_skills_manager.html">Тригерные навыки</a></li>
+                    <li class="list-group-item"><a id="spells_mm" href="/views/spells/spells_manager.html">Заклинания</a></li>
                     <li class="list-group-item"><a id="my_personages" href="/views/user_personage_manager.html?id={{player.id}}">Мои
                         персонажи</a></li>
                 </ul>
