--- a/public/views/personage_logic/derivatives_characteristics.html
+++ b/public/views/personage_logic/derivatives_characteristics.html
@@ -46,9 +46,9 @@
     </div>
 
     <div class="col-xs-4 text-center">
-        <md-button uib-tooltip-html="dodgeDescription" src="/images/dodge.svg">
+        <md-button uib-tooltip-html="dodgeDescription">
             <img style="vertical-align: middle" width="30"
-                 height="30">
+                 height="30" src="/images/dodge.png">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{dodge}}</span>
         </md-button>
     </div>
@@ -66,7 +66,7 @@
 
     <div class="col-xs-4 text-center">
         <md-button uib-tooltip-html="mentalActionPointsDescription">
-            <img src="/images/mentalActionPoints.svg"
+            <img src="/images/mentalActionPoints.png"
                  style="vertical-align: middle" width="30" height="30">
             <span style="line-height: 1; font-size: 30px; vertical-align: middle">{{mentalActionPoints}}</span>
         </md-button>
